# exchangeReader

./: .env.example  README.md  pyproject.toml
src/: main.py
src/models/: __init__.py  exchange.py  exchangeType.py  shopifyExchangeReader.py
src/queries/: orderQuery.graphql
